Fri Aug 22 07:04:17 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * mwc.pl:
        * mpc.pl:
          Use RealBin to get the location of this script, that gives the
          real location also in case we use a symbolic link to these
          scripts.

Wed Aug 20 19:19:17 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * devtools/document_template.pl:
        * devtools/highlight_template.pl:
          Added missing shebang lines to fix rpm packaging warnings

Wed Aug 20 08:33:17 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * clone_build_tree.pl:
        * combine_dsw.pl:
        * create_base.pl:
        * depgen.pl:
        * generate_export_header.pl:
        * mpc.pl:
        * mwc.pl:
        * prj_install.pl:
        * registry.pl:
        * vs_postclean.pl:
          Added missing shebang lines to fix rpm packaging warnings

Wed Aug 13 19:31:17 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * config/gacutil.mpb:

          Bug fix where the path of the assembly to register, i.e.,
          the sharedname, was incorrect. This was resolved by using the
          absolute pathname for the assembly instead of the relative
          pathname.

Wed Jul 30 14:52:28 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * config/lzo2.mbp:
          Base project for lzo2 compression library

Wed Jul 30 14:43:28 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * templates/wb26wrmakefile.mpd:
          Convert a few environment variables to use / instead of \

Wed Jul 23 10:19:28 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * config/gsl.mpb:
          Added base project for GNU Scientific Library

Fri Jul 18 19:09:10 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * modules/Driver.pm:
        * modules/FeatureParser.pm:
        * modules/ProjectCreator.pm:
        * modules/VC8ProjectCreator.pm:
        * modules/WorkspaceCreator.pm:
