@@ -21,6 +21,7 @@ use File::Spec;
 use File::Basename;
 
 my $basePath = $FindBin::RealBin;
+my $baseName = $FindBin::RealScript;
 if ($^O eq 'VMS') {
   $basePath = File::Spec->rel2abs(dirname($0)) if ($basePath eq '');
   $basePath = VMS::Filespec::unixify($basePath);
@@ -41,5 +42,5 @@ sub getBasePath {
 # Main Section
 # ************************************************************
 
-my $driver = new Driver($basePath, basename($0));
+my $driver = new Driver($basePath, $baseName);
 exit($driver->run(@ARGV));
