@@ -1,3 +1,11 @@
+Tue Sep  9 18:46:15 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * mwc.pl:
+        * mpc.pl:
+          Use FindBin::RealScript to get the real script name, that also
+          works when we have a symbolic link with a different name to
+          one of these scripts. This fixes bugzilla 3407
+
 Fri Aug 22 07:04:17 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * mwc.pl:
